Added the main image, trying stuff

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,6 +12,7 @@ $brand-primary: #4F8CFC;
 // Fonts
 $text-font: 'Roboto', sans-serif;
 $header-font: 'Montserrat', sans-serif;
+$title-font: 'Anton';
 
 
 // Animation
