--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,10 +1,15 @@
 .hero {
-    position: relative;
-    /*background-attachment: fixed;*/
+    /*position: relative;
+    background: url('../assets/images/hero/background.jpg') no-repeat center top;
+    background-attachment: fixed;*/
+
+    background: url('../assets/images/hero/background.jpg') no-repeat center top;
+    background-size: auto 100%;
+    background-attachment: fixed;
 
     text-align: center;
 
-    @media screen and (max-width: 1015px) {
+    @media screen and (min-width: 1686px) {
         background-size: 100% auto;
     }
 
@@ -15,11 +20,11 @@
     .info {
         /*background-color: lightgray;*/
         min-height: 30em;
+        font-family : title-font;
 
         .title {
-            font-family: 'Jim Nightshade' , cursive;
-            font-family: 'Anton', sans-serif;
-            font-size : 42px;
+            font-size : 52px;
+            font-weight: bold;
 
             .highlight-brown {
                 color: #bf8040;
@@ -41,8 +46,8 @@
     }
 
     .hero-title {
-        background: url('../assets/images/heimerdonger.png') no-repeat center top;
-        background-size: auto 75%;
+        background: url('../assets/images/heimerdonger-full.png') no-repeat center top;
+        background-size: auto 100%;
         color: #000;
 
         font-family: $header-font;
@@ -63,7 +68,9 @@
     }
 
     .hero-p {
-        text-align: justify;
+        text-align: center;
+        font-size: 35px;
+        font-weight: 900;
     }
 
     .hero-title-highlight {
