--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -1,6 +1,8 @@
 .features {
     $feature-title-height: 50px;
 
+    text-align: center;
+
     .feature {
         &:hover {
             background: #E2E2E2;
@@ -26,6 +28,10 @@
     }
 
     .feature-title-icon {
+        display: inline-block;
+        
+        color: $brand-primary;
+
         margin-right: 5px;
 
         border: 2px solid $brand-primary;
