--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -7,6 +7,11 @@
 
     text-align: center;
 
+    img {
+        width : 100%;
+        height: 100%;
+    }
+
     @media screen and (min-width: 1550px) {
         background-size: 100% auto;
     }
@@ -15,7 +20,7 @@
         /*margin: 100px 0;*/
     }
 
-    .donger {
+    .logo {
         padding-top: 5%;
     }
 
@@ -45,14 +50,14 @@
         padding-top: 10%;
 
         iframe {
-            border-width: 0px;
             width: 100%;
             height: 100%;
+            border-width: 0px;
 
-                @media screen and (min-width: 1550px) {
-                    width: 550px;
-                    height: 315px;
-                }            
+            @media screen and (min-width: 1550px) {
+                width: 550px;
+                height: 315px;
+            }            
         }
 
         .mygroup {
